[Button] Fix MS high contrast button focus states (#1101)
* add focus outline to ms-high-contrast mode

updated focus background of plain buttons

* Removed double background on iconOnly buttons and removed comments

* refactored ms-high-contrast media query into a mixin

--- a/src/styles/shared/buttons.scss
+++ b/src/styles/shared/buttons.scss
@@ -1,3 +1,9 @@
+@mixin high-contrast-button-outline($outline: 2px dotted) {
+  @media (-ms-high-contrast: active) {
+    outline: $outline;
+  }
+}
+
 @mixin button-base {
   $min-height: control-height();
   $vertical-padding: ($min-height - line-height(body) - rem(2px)) / 2;
@@ -42,6 +48,8 @@
     border-color: color('indigo');
     outline: 0;
     box-shadow: 0 0 0 1px color('indigo');
+
+    @include high-contrast-button-outline;
   }
 
   &:active {
@@ -161,12 +169,8 @@
 }
 
 @mixin plain-button-backdrop() {
-  position: absolute;
-  top: -2px;
-  bottom: -2px;
-  left: -5px;
-  right: -5px;
-  display: block;
+  padding: 2px 5px;
+  margin: -2px -5px;
   background: plain-button-background();
   border-radius: border-radius();
   transition: opacity duration() easing();
